[package]
name = "nspawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.17", features = ["derive"] }
comfy-table = "6.1.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
termion = "2.0.1"

[build-dependencies]
clap = { version = "4.0.17", features = ["derive"] }
clap_complete = "4.0.3"
