[package]
name = "nspawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.10"
comfy-table = "7.1.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
termion = "3.0.0"

[build-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.10"
